--- a/index.html
+++ b/index.html
@@ -36,29 +36,24 @@
             </li>
 
             <li class="item">
-              <a href="./portfolio.html" class="header-link link emphasis"
-                >Портфоліо</a
-              >
+              <a href="./portfolio.html" class="header-link link">Портфоліо</a>
             </li>
 
             <li class="item">
-              <a href="#" class="header-link link emphasis">Контакти</a>
+              <a href="#" class="header-link link">Контакти</a>
             </li>
           </ul>
         </nav>
         <div class="header-contacts header-icon">
-          <a href="mailto:info@devstudio.com" class="header-link link emphasis">
+          <a href="mailto:info@devstudio.com" class="header-link link">
             <svg class="enveloper">
               <use href="./images/icons.svg#icon-envelope"></use></svg
             >info@devstudio.com</a
           >
 
-          <a href="tel:+380441111111" class="tel header-link link emphasis"
+          <a href="tel:+380441111111" class="tel header-link link"
             ><svg class="smartphone">
-              <use
-                class="emphasis"
-                href="./images/icons.svg#icon-smartphone"
-              ></use></svg
+              <use href="./images/icons.svg#icon-smartphone"></use></svg
             >+38 044 111 11 11</a
           >
         </div>
@@ -68,8 +63,8 @@
     <main>
       <section class="order">
         <div class="container">
-          <h1 class="tittle emphasis">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-          <button class="buton emphasis" type="button" data-modal-open>
+          <h1 class="tittle">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+          <button class="buton" type="button" data-modal-open>
             Замовити послугу
           </button>
         </div>
@@ -80,53 +75,53 @@
         <div class="container">
           <ul class="description-list list">
             <li class="description-item">
-              <a href="" class="descrip frame">
+              <a href="" class="descrip">
                 <svg class="descrip-icon">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </a>
-              <h3 class="description emphasis">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="description-text emphasis">
+              <h3 class="description">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="description-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
 
             <li class="description-item">
-              <a href="" class="descrip frame">
+              <a href="" class="descrip">
                 <svg class="descrip-icon">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </a>
-              <h3 class="description emphasis">ПУНКТУАЛЬНІСТЬ</h3>
+              <h3 class="description">ПУНКТУАЛЬНІСТЬ</h3>
 
-              <p class="description-text emphasis">
+              <p class="description-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
 
             <li class="description-item">
-              <a href="" class="descrip frame">
+              <a href="" class="descrip">
                 <svg class="descrip-icon">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </a>
-              <h3 class="description emphasis">ПЛАНУВАННЯ</h3>
+              <h3 class="description">ПЛАНУВАННЯ</h3>
 
-              <p class="description-text emphasis">
+              <p class="description-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
 
             <li class="description-item">
-              <a href="" class="descrip frame">
+              <a href="" class="descrip">
                 <svg class="descrip-icon">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </a>
-              <h3 class="description emphasis">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="description-text emphasis">
+              <h3 class="description">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="description-text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -138,9 +133,9 @@
       <!--ABOUT-->
       <section class="about">
         <div class="container">
-          <h3 class="work emphasis">Чим ми займаємося</h3>
+          <h3 class="work">Чим ми займаємося</h3>
           <ul class="gallery-images">
-            <li class="work-img frame">
+            <li class="work-img">
               <div class="about-work">
                 <img
                   class="images-about"
@@ -148,12 +143,12 @@
                   alt="keyboard"
                   width="370"
                 />
-                <div class="work-title emphasis frame">
+                <div class="work-title">
                   <h3>ДЕСКТОПНІ ДОДАТКИ</h3>
                 </div>
               </div>
             </li>
-            <li class="work-img frame">
+            <li class="work-img">
               <div class="about-work">
                 <img
                   class="images-about"
@@ -161,12 +156,12 @@
                   alt="cellphone"
                   width="370"
                 />
-                <div class="work-title emphasis frame">
+                <div class="work-title">
                   <h3>МОБІЛЬНІ ДОДАТКИ</h3>
                 </div>
               </div>
             </li>
-            <li class="work-img frame">
+            <li class="work-img">
               <div class="about-work">
                 <img
                   class="images-about"
@@ -174,7 +169,7 @@
                   alt="tablet"
                   width="370"
                 />
-                <div class="work-title emphasis frame">
+                <div class="work-title">
                   <h3>ДИЗАЙНЕРСЬКІ РІШЕННЯ</h3>
                 </div>
               </div>
@@ -186,17 +181,16 @@
       <!--Команда-->
       <section class="team">
         <div class="container">
-          <h3 class="our-team emphasis">Наша команда</h3>
+          <h3 class="our-team">Наша команда</h3>
           <ul class="gallery-team">
-            <li class="team-cards frame">
+            <li class="team-cards">
               <img
-                class="frame"
                 src="./images/designer.jpg"
                 alt="product designer"
                 width="270"
               />
-              <p class="team-people emphasis">Ігор Дем'яненко</p>
-              <p class="team-career emphasis">Product Designer</p>
+              <p class="team-people">Ігор Дем'яненко</p>
+              <p class="team-career">Product Designer</p>
               <ul class="social-icons list">
                 <li class="social-item">
                   <a href="" class="social-link">
@@ -229,15 +223,14 @@
               </ul>
             </li>
 
-            <li class="team-cards frame">
+            <li class="team-cards">
               <img
-                class="frame"
                 src="./images/developer.jpg"
                 alt="frontend developer"
                 width="270"
               />
-              <p class="team-people emphasis">Ольга Рєпіна</p>
-              <p class="team-career emphasis">Frontend Developer</p>
+              <p class="team-people">Ольга Рєпіна</p>
+              <p class="team-career">Frontend Developer</p>
               <ul class="social-icons list">
                 <li class="social-item">
                   <a href="" class="social-link">
@@ -270,15 +263,10 @@
               </ul>
             </li>
 
-            <li class="team-cards frame">
-              <img
-                class="frame"
-                src="./images/marketing.jpg"
-                alt="marketing"
-                width="270"
-              />
-              <p class="team-people emphasis">Микола Тарасов</p>
-              <p class="team-career emphasis">Marketing</p>
+            <li class="team-cards">
+              <img src="./images/marketing.jpg" alt="marketing" width="270" />
+              <p class="team-people">Микола Тарасов</p>
+              <p class="team-career">Marketing</p>
               <ul class="social-icons list">
                 <li class="social-item">
                   <a href="" class="social-link">
@@ -311,15 +299,10 @@
               </ul>
             </li>
 
-            <li class="team-cards frame">
-              <img
-                class="frame"
-                src="./images/uldesigner.jpg"
-                alt="uldesigner"
-                width="270"
-              />
-              <p class="team-people emphasis">Михайло Єрмаков</p>
-              <p class="team-career emphasis">UI Designer</p>
+            <li class="team-cards">
+              <img src="./images/uldesigner.jpg" alt="uldesigner" width="270" />
+              <p class="team-people">Михайло Єрмаков</p>
+              <p class="team-career">UI Designer</p>
               <ul class="social-icons list">
                 <li class="social-item">
                   <a href="" class="social-link">
@@ -357,7 +340,7 @@
       <!-- Regular clients -->
       <section class="clients">
         <div class="container">
-          <h3 class="clients-title emphasis">Постійні клієнти</h3>
+          <h3 class="clients-title">Постійні клієнти</h3>
           <ul class="regular-clients">
             <li class="client">
               <svg class="client-logo">
@@ -430,7 +413,7 @@
               </ul>
             </div>
             <div class="block-one">
-              <p class="add emphasis">ПРИЄДНУЙТЕСЬ</p>
+              <p class="add">ПРИЄДНУЙТЕСЬ</p>
               <ul class="footer-social-icons list">
                 <li class="footer-icons">
                   <a href="" class="footer-link">
