--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,7 @@
         <nav>
           <ul class="header-list list">
             <li class="item">
-              <a href="./index.html" class="header-link link emphasis"
-                >Студія</a
-              >
+              <a href="./index.html" class="header-link link">Студія</a>
             </li>
 
             <li class="item">
@@ -42,21 +40,18 @@
             </li>
 
             <li class="item">
-              <a href="#" class="header-link link emphasis">Контакти</a>
+              <a href="#" class="header-link link">Контакти</a>
             </li>
           </ul>
         </nav>
         <div class="header-contacts header-icon">
-          <a href="mailto:info@devstudio.com" class="header-link link emphasis">
+          <a href="mailto:info@devstudio.com" class="header-link link">
             <svg class="enveloper">
-              <use
-                class="emphasis"
-                href="./images/icons.svg#icon-envelope"
-              ></use></svg
+              <use href="./images/icons.svg#icon-envelope"></use></svg
             >info@devstudio.com</a
           >
 
-          <a href="tel:+380441111111" class="tel header-link link emphasis"
+          <a href="tel:+380441111111" class="tel header-link link"
             ><svg class="smartphone">
               <use href="./images/icons.svg#icon-smartphone"></use></svg
             >+38 044 111 11 11</a
@@ -73,31 +68,23 @@
         <div class="container">
           <ul class="button-portfolio">
             <li>
-              <button class="button-oll" type="button emphasis">Усі</button>
+              <button class="button-oll" type="button">Усі</button>
             </li>
 
             <li>
-              <button class="button-web" type="button emphasis">
-                Веб-сайти
-              </button>
+              <button class="button-web" type="button">Веб-сайти</button>
             </li>
 
             <li>
-              <button class="button-addition" type="button emphasis">
-                Додатки
-              </button>
+              <button class="button-addition" type="button">Додатки</button>
             </li>
 
             <li>
-              <button class="button-design" type="button emphasis">
-                Дизайн
-              </button>
+              <button class="button-design" type="button">Дизайн</button>
             </li>
 
             <li>
-              <button class="button-marceting" type="button emphasis">
-                Маркетинг
-              </button>
+              <button class="button-marceting" type="button">Маркетинг</button>
             </li>
           </ul>
 
@@ -105,177 +92,175 @@
 
           <section class="pro">
             <ul class="projekt-cards">
-              <li class="projekt-page frame">
+              <li class="projekt-page">
                 <div class="img-wrapper">
                   <img
-                    class="picture frame"
+                    class="picture"
                     src="./images/project1.jpg"
                     alt="picture website"
                     width="370"
                   />
-                  <div class="pro-description emphasis">
+                  <div class="pro-description">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <h3 class="projekt emphasis">Технокряк</h3>
+                <h3 class="projekt">Технокряк</h3>
 
-                <p class="project-description emphasis">Веб-сайт</p>
+                <p class="project-description">Веб-сайт</p>
               </li>
 
-              <li class="projekt-page frame">
+              <li class="projekt-page">
                 <div class="img-wrapper">
                   <img
-                    class="picture frame"
+                    class="picture"
                     src="./images/project2.jpg"
                     alt="picture design"
                     width="370"
                   />
-                  <div class="pro-description emphasis">
+                  <div class="pro-description">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <h3 class="projekt emphasis">
-                  Постер New Orlean vs Golden Star
-                </h3>
+                <h3 class="projekt">Постер New Orlean vs Golden Star</h3>
 
-                <p class="project-description emphasis">Дизайн</p>
+                <p class="project-description">Дизайн</p>
               </li>
 
-              <li class="projekt-page frame">
+              <li class="projekt-page">
                 <div class="img-wrapper">
                   <img
-                    class="picture frame"
+                    class="picture"
                     src="./images/project3.jpg"
                     alt="picture restorant Seafood"
                     width="370"
                   />
-                  <div class="pro-description emphasis">
+                  <div class="pro-description">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <h3 class="projekt emphasis">Ресторан Seafood</h3>
+                <h3 class="projekt">Ресторан Seafood</h3>
 
-                <p class="project-description emphasis">Додаток</p>
+                <p class="project-description">Додаток</p>
               </li>
 
-              <li class="projekt-page frame">
+              <li class="projekt-page">
                 <div class="img-wrapper">
                   <img
-                    class="picture frame"
+                    class="picture"
                     src="./images/project4.jpg"
                     alt="picture project Prime"
                     width="370"
                   />
-                  <div class="pro-description emphasis">
+                  <div class="pro-description">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <h3 class="projekt emphasis">Проєкт Prime</h3>
+                <h3 class="projekt">Проєкт Prime</h3>
 
-                <p class="project-description emphasis">Маркетинг</p>
+                <p class="project-description">Маркетинг</p>
               </li>
 
-              <li class="projekt-page frame">
+              <li class="projekt-page">
                 <div class="img-wrapper">
                   <img
-                    class="picture frame"
+                    class="picture"
                     src="./images/project5.jpg"
                     alt="picture project Boxes"
                     width="370"
                   />
-                  <div class="pro-description emphasis">
+                  <div class="pro-description">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <h3 class="projekt emphasis">Проєкт Boxes</h3>
+                <h3 class="projekt">Проєкт Boxes</h3>
 
-                <p class="project-description emphasis">Додаток</p>
+                <p class="project-description">Додаток</p>
               </li>
 
-              <li class="projekt-page frame">
+              <li class="projekt-page">
                 <div class="img-wrapper">
                   <img
-                    class="picture frame"
+                    class="picture"
                     src="./images/project6.jpg"
                     alt="picture website"
                     width="370"
                   />
-                  <div class="pro-description emphasis">
+                  <div class="pro-description">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <h3 class="projekt emphasis">Inspiration has no Borders</h3>
+                <h3 class="projekt">Inspiration has no Borders</h3>
 
-                <p class="project-description emphasis">Веб-сайт</p>
+                <p class="project-description">Веб-сайт</p>
               </li>
 
-              <li class="projekt-page frame">
+              <li class="projekt-page">
                 <div class="img-wrapper">
                   <img
-                    class="picture frame"
+                    class="picture"
                     src="./images/project7.jpg"
                     alt="picture edition design"
                     width="370"
                   />
-                  <div class="pro-description emphasis">
+                  <div class="pro-description">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <h3 class="projekt emphasis">Видання Limited Edition</h3>
+                <h3 class="projekt">Видання Limited Edition</h3>
 
-                <p class="project-description emphasis">Дизайн</p>
+                <p class="project-description">Дизайн</p>
               </li>
 
-              <li class="projekt-page frame">
+              <li class="projekt-page">
                 <div class="img-wrapper">
                   <img
-                    class="picture frame"
+                    class="picture"
                     src="./images/project8.jpg"
                     alt="picture project LAB"
                     width="370"
                   />
-                  <div class="pro-description emphasis">
+                  <div class="pro-description">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <h3 class="projekt emphasis">Проєкт LAB</h3>
+                <h3 class="projekt">Проєкт LAB</h3>
 
-                <p class="project-description emphasis">Маркетинг</p>
+                <p class="project-description">Маркетинг</p>
               </li>
 
-              <li class="projekt-page frame">
+              <li class="projekt-page">
                 <div class="img-wrapper">
                   <img
-                    class="picture frame"
+                    class="picture"
                     src="./images/project9.jpg"
                     alt="picture Growing Business"
                     width="370"
                   />
-                  <div class="pro-description emphasis">
+                  <div class="pro-description">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <h3 class="projekt emphasis">Growing Business</h3>
+                <h3 class="projekt">Growing Business</h3>
 
-                <p class="project-description emphasis">Додаток</p>
+                <p class="project-description">Додаток</p>
               </li>
             </ul>
           </section>
@@ -319,7 +304,7 @@
               </ul>
             </div>
             <div class="block-one">
-              <p class="add emphasis">ПРИЄДНУЙТЕСЬ</p>
+              <p class="add">ПРИЄДНУЙТЕСЬ</p>
               <ul class="footer-social-icons list">
                 <li class="footer-icons">
                   <a href="" class="footer-link">
